--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
  "version": "0.0.1",
  "description": "gra kalambury",
  "dependencies": {
+  "cookie-parser": "^1.4.5",
   "express": "^4.17.1",
+  "express-session": "^1.17.2",
   "socket.io": "^4.1.1"
  }
 }
