--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
  "description": "gra kalambury",
  "dependencies": {
   "cookie-parser": "^1.4.5",
+  "ejs": "^3.1.6",
   "express": "^4.17.1",
   "express-session": "^1.17.2",
+  "mongoose": "^5.12.12",
+  "passport": "^0.4.1",
+  "passport-facebook": "^3.0.0",
   "socket.io": "^4.1.1"
  }
 }
